// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Link Disabled 1`] = `
<a
  aria-disabled={true}
  className="fd-link is-disabled"
  href="#"
>
  Disabled
</a>
`;

exports[`Storyshots Component API/Link No Styles 1`] = `
<a
  className="xxx-link"
  href="#"
>
  Default
</a>
`;

exports[`Storyshots Component API/Link Primary 1`] = `
<a
  className="fd-link"
  href="#"
>
  Default
</a>
`;

exports[`Storyshots Component API/Link Subtle 1`] = `
<a
  className="fd-link fd-link--subtle"
  href="#"
>
  Subtle
</a>
`;
